# ml-kernel-lab

./: CMakeLists.txt  README.md  pyproject.toml
benchmarks/triton_kernel/: bench_rms_norm.py  bench_swiglu.py
csrc/tools/: show_gpu_info.cu
src/ml_kernel_lab/: __init__.py
src/ml_kernel_lab/kernel/triton_kernel/: __init__.py  rms_norm.py  swiglu.py
tests/test_triton_kernel/: test_rms_norm.py  test_swiglu.py
tools/: show_gpu_info.py
