[project]
name = "ml-kernel-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uno Wu", email = "st9007a@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
